# evosector

./: .gitignore  Cargo.toml  README.md
assets/shaders/: cell.frag  cell.vert  grid.frag  grid.vert
src/: alias.rs  camera.rs  constants.rs  event.rs  grid.rs  impls.rs  lib.rs  main.rs  mouse.rs  resource.rs  traits.rs
src/cell/: mod.rs
src/genome/: gene.rs  mod.rs
src/math/: mod.rs
src/opengl/: mod.rs  program.rs  shader.rs
src/sector/: mod.rs  solid.rs  water.rs
src/segment/: mod.rs  water.rs
