[package]
name = "evosector"
description = "Evosegment is a simulation of cell evolution on a sector map."
version = "0.0.1"
authors = ["Dmitriy Mayorov<MayorDi@yandex.ru>"]
license = "GPL-3"
edition = "2021"
rust-version = "1.71.0"
homepage = ""
repository = ""
readme = "README.md"

[dependencies]
rand = "0.8.5"
nalgebra = "0.32.5"
sdl2 = "0.36.0"

gen-world = { path = "../gen-world/" }